fix(spin): mask add default z-index

--- a/style/spin.scss
+++ b/style/spin.scss
@@ -9,6 +9,7 @@
   &__loading {
     position: absolute;
     inset: 0;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     align-items: center;
